# sctp-dsai-ds2-coaching-elt-e2e-dagster

./: .gitignore  README.md
austin_bike_e2e_dagster/: e2e_dagstersetup.md
austin_bike_elt_project (WIP)/: README.md
austin_bike_elt_project (WIP)/austin_bike_dagster/: setup.py
austin_bike_elt_project (WIP)/austin_bike_dbt/: .user.yml
austin_bike_elt_project (WIP)/austin_bike_meltano/: meltano.yml
austin_bike_elt_project (old)/austin_bike_dagster/: pyproject.toml
austin_bike_elt_project (old)/austin_bike_dbt/: dbt_project.yml  profiles.yml
austin_bikeshare_alvin_elt/: Austin_Bikeshare_Dagster_README.md
austin_bikeshare_alvin_elt/dagster_elt/: pyproject.toml  setup.py
austin_bikeshare_alvin_elt/dagster_elt/dagster_elt/: assets.py  schedules.py
austin_bikeshare_e2e_dagster/: Austin_Bikeshare_Dagster_README.md  RR.md
austin_bikeshare_elt_dagster_project/: Austin_Bikeshare_Dagster_README.md
austin_bikeshare_v2_elt_dagster_project/: Austin_Bikeshare_Dagster_v2_README.md
dagster_dbt_integration/: pyproject.toml  setup.py
dagster_hdb_subprocess/: README.md  pyproject.toml  setup.cfg  setup.py
dbt_resale/: .user.yml  dbt_project.yml  profiles.yml
hdb_resale_e2e_dagster/: HDB_Resale_Dagster_README.md
hdb_resale_e2e_dagster_old/dagster_hdb_resale_subprocess/: pyproject.toml
hdb_resale_elt_dagster_project/: HDB_Resale_Dagster_README.md
meltano-resale/: meltano.yml
meltano_csv_to_postgres/: Meltano_csv_Postgres_README.md  meltano.yml  split_data.py
meltano_csv_to_postgres_old/: Meltano_csv_Postgres_README.md  meltano.yml  split_data.py
(+95 files in other folders)
