[project]
name = "dagster_hdb_resale_subprocess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_hdb_resale_subprocess.definitions"
code_location_name = "dagster_hdb_resale_subprocess"

[tool.setuptools.packages.find]
exclude=["dagster_hdb_resale_subprocess_tests"]
